--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rex Components</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="">
-    <div id="app"></div>
+<body class="flex items-center justify-center min-h-screen bg-gray-100">
+    <div id="app" class="w-full max-w-xl p-4 bg-white rounded shadow-md">
+        <!-- Your app content goes here -->
+    </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
